# AGH-Kompilatory

./: README.md
Skaner/: CMakeLists.txt  FrozenPosition.h  HtmlHighlighter.cpp  README.md  Token.cpp  Token.h  ex.txt  exHTML.txt  main.cpp
Skaner/Scanner/: Scanner.cpp  Scanner.h
